allow to create a circle when create a frame
