# app/controllers/frames_controller.rb
@@ -3,12 +3,24 @@ class FramesController < ApplicationController
 
   # POST /frames
   def create
-    @frame = Frame.new(frame_params)
+    @frame = Frame.new(frame_params.except(:circle))
+    @circle = nil
 
-    if @frame.save
-      render :create, status: :created
-    else
-      render json: { errors: @frame.errors.full_messages }, status: :unprocessable_content
+    Frame.transaction do
+      if @frame.save
+        if circle_params.present?
+          @circle = @frame.circles.build(circle_params)
+          unless @circle.save
+            raise ActiveRecord::Rollback
+          end
+        end
+        render :create, status: :created
+      else
+        render json: { errors: @frame.errors.full_messages }, status: :unprocessable_content
+      end
+    rescue ActiveRecord::Rollback
+      errors = @frame.errors.full_messages + (@circle&.errors&.full_messages || [])
+      render json: { errors: errors }, status: :unprocessable_content
     end
   end
 
@@ -36,6 +48,10 @@ class FramesController < ApplicationController
   end
 
   def frame_params
-    params.require(:frame).permit(:x, :y, :width, :height)
+    params.require(:frame).permit(:x, :y, :width, :height, circle: [ :x, :y, :diameter ])
+  end
+
+  def circle_params
+    frame_params[:circle]
   end
 end
